# farme.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  farm.sqlite  package-lock.json  postgres-container.sh
database/: Cargo.toml
database/migrations/2025-06-13-064909_create_farms/: down.sql
database/migrations/2025-11-15-151013-0000_user_settings/: up.sql
database/src/: farm.rs  lib.rs  location.rs  schema.rs  user.rs
database/src/data/: mod.rs
database/src/user/: settings.rs
map/: .gitignore  docker-compose.yml  download-mbtiles.sh
migrations/2025-06-13-064909_create_farms/: down.sql  up.sql
migrations/2025-06-23-134239_create_users/: down.sql  up.sql
migrations/2025-07-19-194930_add_external_ids/: up.sql
migrations/2025-10-17-210832-0000_farm_ownership_requests/: up.sql
migrations/2025-10-18-141004-0000_external_ids/: up.sql
robot/: farm-roundtrip.robot  home.robot  keywords.robot  user-roundtrip.robot
server/: Cargo.toml
server/migrations/2025-06-23-134239_create_users/: down.sql
server/migrations/2025-07-21-172655_farm_ownership_privilege/: up.sql
server/src/: main.rs  validation.rs
server/src/api/: v1.rs
server/src/api/v1/: error.rs  farms.rs  ident.rs  users.rs
server/src/data/: location.rs
src/: api.rs  ident.rs  main.rs  schema.rs  validation.rs
src/api/: v1.rs
src/api/v1/: error.rs  farms.rs  ident.rs  types.rs  users.rs
src/data/: farm.rs  mod.rs  user.rs
src/mailing/: mod.rs
src/mailing/templates/: email_validation.hbs.html
web/: README.md  angular.json  package-lock.json  package.json
web/src/: index.html  styles.css  styles.scss
web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.ts  auth.service.ts  breadcrumb.service.ts
web/src/app/api/: api.service.ts  api.ts  farm.service.ts  models.ts  user.service.ts
web/src/app/component/farm-details/: farm-details.component.spec.ts  farm-details.component.ts
web/src/app/component/farm-list/: farm-list.component.html  farm-list.component.ts
web/src/app/component/farm/create-farm/: create-farm.component.html  create-farm.component.ts
web/src/app/component/farm/farm-details/: farm-details.component.html  farm-details.component.ts
web/src/app/component/farm/farm-list/: farm-list.component.html  farm-list.component.spec.ts  farm-list.component.ts
web/src/app/component/farm/farm-map/: farm-map.component.html  farm-map.component.spec.ts  farm-map.component.ts
web/src/app/component/home-page/: home-page.component.html  home-page.component.ts
web/src/app/component/login-page/: login-page.component.css  login-page.component.html  login-page.component.ts
web/src/app/component/password-change-page/: password-change-page.component.html  password-change-page.component.ts
web/src/app/component/register-page/: register-page.component.css  register-page.component.html  register-page.component.ts
web/src/app/component/user-change-page/: user-change-page.component.html  user-change-page.component.spec.ts  user-change-page.component.ts
web/src/app/component/user-page/: user-page.component.html  user-page.component.spec.ts  user-page.component.ts
web/src/app/widget/leaflet-map/: leaflet-map.component.ts  loeaflet-vectorgrid-wrapper.ts  vector-tiles-style.ts
(+6 files in other folders)
