[package]
name = "farme-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["returning_clauses_for_sqlite_3_35", "chrono"] }
#diesel-derive-enum = { version = "3.0.0-beta.1", features = ["sqlite"] }
diesel_migrations = "2.2.0"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
rocket_cors = "0.6.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.219", features = ["derive"] }
#serde = { version = "1.0.219", features = ["derive"] }
