[package]
name = "farme-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0", features = ["from"] }
diesel = { version = "2.2.10", features = ["chrono", "postgres"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5"
regex = "1.11"
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
rocket_cors = "0.6.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.46.1"
