[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }