[package]
name = "farme-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }

base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0", features = ["from"] }
dotenvy = "0.15"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5"
regex = "1.11"
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.46.1"
uuid = { version = "1.18.1", features = ["v4"] }
